# IoT-Project

./: main.go
Android/SenseHatClienFinal/: settings.gradle
Android/SenseHatClienFinal/app/: build.gradle
Android/SenseHatClienFinal/app/src/androidTest/java/com/example/sensehatclienfinal/: ExampleInstrumentedTest.java
Android/SenseHatClienFinal/app/src/main/: AndroidManifest.xml
Android/SenseHatClienFinal/app/src/main/java/com/example/sensehatclienfinal/: Common.java  ConfigActivity.java  DynamicList.java  IIRFIlter.java  IIRFilterData.java  LEDSending.java  (+2 more)
Android/SenseHatClienFinal/app/src/main/res/layout/: activity_config.xml  activity_dynamic_list.xml  activity_dynamic_list_measurements.xml  activity_led_sending.xml  activity_main.xml
Android/SenseHatClienFinal/app/src/main/res/values/: strings.xml  themes.xml
Android/SenseHatClienFinal/app/src/main/res/values-night/: themes.xml
Android/SenseHatClienFinal/gradle/wrapper/: gradle-wrapper.properties
Desktop/: Cargo.toml  settings.json
Desktop/src/: main.rs
WWW/: get_color.go  get_color.py  get_measurements.go  get_measurements.py  go.mod  main.go  requirements.md  server.py  set_color.go  set_color.py
WebApp/: REST_chart_get copy.js  REST_chart_get.js  Rest_chart copy.htm  Rest_chart.htm  button1.js  dynamic_table.htm  matrix_led.html  matrix_led.js  meas_mock.php  projectMock.php  server.js  settings.htm  settings.js
webapp/: IIR_Filter.js  IIR_Filter_Data.js  REST_chart_get copy.js  Rest_chart copy.htm  Rest_chart.htm  button.html  dynamic-table.js  projectMock.php  temperature_pressure.php
(+1 files in other folders)
